# buy-used-drive-smart

./: pyproject.toml
.github/workflows/: deploy.yaml
client/: .env.production  index.html  package-lock.json  package.json
client/src/: App.jsx  main.jsx
client/src/components/: ChartWrapper.jsx  Hero.jsx  Navbar.jsx  PriceByLocationChart.jsx  PriceByYearChart.jsx  SearchForm.jsx  Table.jsx  Top5LocationsChart.jsx
client/src/routes/: about.jsx  root.jsx
server/: functions.py  main.py  models.py
